# ghid

./: .gitignore  Main.hs  ProjectHome.md  README.md  ghid.cabal  make.haskell  rem.smart  test.hs
Docs/: 0001-Actual-code-fixing-Sixaxis.patch  HID_description.gnumeric  HOWTO.txt  eHID.pl  ps3.h  ps3.smart  sixaxis.smart  sixaxis_debug.txt  sixaxis_new.smart  smart.txt
Hid/: Export.hs  HParse.hs  HToName.hs  HTools.hs  HTypes.hs  Import.hs  UPG.hs
upgs/: 0001_desktop.upg  0002_sim.upg  0003_vr.upg  0004_sports.upg  0005_gaming.upg  0006_generic.upg  0007_kbd.upg  0008_leds.upg  0009_button.upg  000A_ordinal.upg  000B_tele.upg  000C_consume.upg  000D_digit.upg  000E_reserved.upg  000F_PID.upg  0010_unicode.upg  0011-0013_reserved.upg  0014_andisp.upg  0015-001F_reserved.upg  0020_sensor.upg  0021-003F_reserved.upg  0040_medical.upg  0041-007F_reserved.upg  0080_monitor.upg  0081_mon_enum.upg  0082_VESAVC.upg  0083_VESACmnd.upg  0084_PwrDev.upg  0085_BatSys.upg  0086-0087_power.upg  0088-008B_reserved.upg  008C_barcode.upg  008D_scale.upg  008E_msr.upg  008F_PoS.upg  0090_camera.upg  0091_arcade.upg  0092_gaming.upg  0093-FEFF_reserved.upg  FF00-FFFF_vendor1.upg  (+4 more)
